--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,7 @@ img {
 
 .section_total {
     width: 95%;
-    max-width: 1100px;
+    max-width: 1000px;
     margin-right: auto;
     margin-left: auto;
 }
@@ -118,10 +118,6 @@ img {
     font-weight: 700;
 }
 
-
-
-/* *********************** */
-
 .container_range {
     
     background-color: var(--VeryDarkBlue);
@@ -188,6 +184,7 @@ img {
     font-weight: 700;
 }
 
+
 /* ******* Media Querys ********** */
 
 @media (min-width: 375px) {
@@ -207,8 +204,14 @@ img {
         max-width: 1500px;
         display: grid;
         grid-template-columns: 400px 1fr;
+
+        grid-template-rows: 45px 200px;
+    }
+    .section_1 {
+        grid-row: 1 / 3;
     }
     .section_2 {
+        grid-row: 2 / 3 ;
         padding: 3rem 3rem;
         padding-bottom: 0;
     }
